--- a/BeetleX.Ligth.gpRPC/BeetleX.Ligth.gpRPC.csproj
+++ b/BeetleX.Ligth.gpRPC/BeetleX.Ligth.gpRPC.csproj
@@ -17,11 +17,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BeetleX.Light" Version="0.32.24.617" />
     <PackageReference Include="Google.Protobuf" Version="3.27.1" />
+    <PackageReference Include="Grpc.Tools" Version="2.64.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\..\BeetleX.Light\BeetleX.Light\BeetleX.Light\BeetleX.Light.csproj" />
+    <Protobuf Include="Protos\*.proto" GrpcServices="Both" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Protos\messages.proto" />
   </ItemGroup>
 
 </Project>
