--- a/BeetleX.Light.gpRPC/BeetleX.Light.gpRPC.csproj
+++ b/BeetleX.Light.gpRPC/BeetleX.Light.gpRPC.csproj
@@ -17,7 +17,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BeetleX.Light" Version="0.34.24.619" />
     <PackageReference Include="Google.Protobuf" Version="3.27.1" />
     <PackageReference Include="Grpc.Tools" Version="2.64.0">
       <PrivateAssets>all</PrivateAssets>
@@ -29,6 +28,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Protos\messages.proto" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\BeetleX.Light\BeetleX.Light\BeetleX.Light\BeetleX.Light.csproj" />
   </ItemGroup>
 
 </Project>
