--- a/Getaway/gpRPC.Gateway.Messages/gpRPC.Gateway.Messages.csproj
+++ b/Getaway/gpRPC.Gateway.Messages/gpRPC.Gateway.Messages.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BeetleX.Light.gpRPC\BeetleX.Light.gpRPC.csproj" />
+  </ItemGroup>
+
 </Project>
