--- a/Getaway/gpRPC.Gateway.Messages/gpRPC.Gateway.Messages.csproj
+++ b/Getaway/gpRPC.Gateway.Messages/gpRPC.Gateway.Messages.csproj
@@ -7,7 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\messages.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.Tools" Version="2.64.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\BeetleX.Light.gpRPC\BeetleX.Light.gpRPC.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\messages.proto" GrpcServices="Both" />
   </ItemGroup>
 
 </Project>
