--- a/gpRPC.Gateway.Server/gpRPC.Gateway.Server.csproj
+++ b/gpRPC.Gateway.Server/gpRPC.Gateway.Server.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Getaway\gpRPC.Gateway.Messages\gpRPC.Gateway.Messages.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="generate.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
