--- a/Getaway/gpRPC.Gateway.Subscriber/gpRPC.Gateway.Subscriber.csproj
+++ b/Getaway/gpRPC.Gateway.Subscriber/gpRPC.Gateway.Subscriber.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\gpRPC.Gateway.Messages\gpRPC.Gateway.Messages.csproj" />
+  </ItemGroup>
+
 </Project>
